fixat bilder till info om ett objekt

--- a/design/design/Views/Home/Felanmalan.cshtml
+++ b/design/design/Views/Home/Felanmalan.cshtml
@@ -92,7 +92,7 @@
                 </div>
                     <br />
                 <div class="falt">
-                    <div class="col-md-10 col-xs-12">
+                    <div class="col-md-10 col-xs-12 huvudnyckel">
                         <label style="margin-bottom: 1px;">Får vi gå in med huvudnyckel? *</label><br />
                                 <form>
                                     <input type="radio" name="val" value="ja"> Ja
@@ -102,8 +102,8 @@
                 </div>
                 <br />
                 <div class="falt" id="hund">
-                    <div class="col-md-10 col-xs-10">
-                    <label style="margin-top:5px; margin-bottom: 1px;">Har ni hund? *</label>
+                    <div class="col-md-10 col-xs-10 huvudnyckel">
+                        <label style="margin-top:5px; margin-bottom: 1px;">Har ni hund? *</label>
                         <form>
                             <input type="radio" name="val" value="ja"> Ja
                             <input type="radio" name="val" value="nej"> Nej<br>
@@ -112,16 +112,16 @@
                 </div>
                 <br />
                 <div class="falt">
-                    <div class="col-md-10 col-xs-10" id="katt">
+                    <div class="col-md-10 col-xs-10 huvudnyckel" id="katt">
                         <label style="margin-top:5px; margin-bottom: 1px;">Har ni katt? *</label>
                         <form>
                             <input type="radio" name="val" value="ja"> Ja
                             <input type="radio" name="val" value="nej"> Nej<br /><br />
                         </form>
-                     </div>
+                    </div>
                 </div>
              
-                    <div class="col-md-4">
+                    <div class="col-md-4 skicka">
                         <button type="submit" class="btn btn-warning">Skicka <span class="glyphicon glyphicon-send"></span></button>
                     </div>
             </div>
