--- a/design/design/Views/Home/InfoObjekt.cshtml
+++ b/design/design/Views/Home/InfoObjekt.cshtml
@@ -43,29 +43,22 @@
                     <ol class="carousel-indicators">
                         <li class="item1 active"></li>
                         <li class="item2"></li>
-                        <li class="item3"></li>
-                        <li class="item4"></li>
-                        <li class="item5"></li>
+                        
                     </ol>
 
                     <!-- Wrapper for slides -->
+               
                     <div class="carousel-inner" role="listbox">
                         <div class="item active">
-                            <img src="~/Content/Images/Blaslampan%202%20-%203.jpg" alt="Chania">
+                            <img src="~/Content/Images/Blaslampan%202%20-%203.jpg" alt="Rynningegatan">
                         </div>
-
+                      
                         <div class="item">
-                            <img src="~/Content/Images/Brandstationen%206%20-%203.jpg" alt="Chania">
+                            <img src="~/Content/Images/planl%c3%b6sning.jpg" alt="Planlösning">
                         </div>
-                        <div class="item">
-                            <img src="~/Content/Images/Fetknoppen%202%20-%202.jpg" alt="Flower">
-                        </div>
-                        <div class="item">
-                            <img src="~/Content/Images/Krakan%209%20-%201.jpg" alt="Flower">
-                        </div>
-                        <div class="item">
-                            <img src="~/Content/Images/Liljan%209%20-%201.jpg" alt="Flower">
-                        </div>
+                       
+                      
+                        
                     </div>
 
                     <!-- Left and right controls -->
