--- a/design/design/Content/bootstrap.css
+++ b/design/design/Content/bootstrap.css
@@ -1307,7 +1307,13 @@ p {
 }
 /*Här är för mobilskärm*/
 
-
+div.skicka{
+    margin-top: 10px;
+}
+div.huvudnyckel{
+    padding-left:0px;
+    padding-right:0px;
+}
       div.leftdiv1{
     margin-left: 1px;
    /* margin-right: 5%;
@@ -2231,6 +2237,11 @@ h6,
    /* margin-right: 5%;
     padding-left: 20px;*/
     
+
+}
+    div.huvudnyckel{
+    padding-left:15px;
+    padding-right:15px;
 }
     div.leftdiv-intresse2{
       margin-left: 4%;
