--- a/design/design/Views/Home/Felanmalan.cshtml
+++ b/design/design/Views/Home/Felanmalan.cshtml
@@ -127,7 +127,7 @@
             </div>
         </div>
         <div class="col-md-4 col-sm-4 col-lg-4 rightdiv"  >
-            <p style="text-align:center;"><br /><b>På hemsidan kan ni göra felanmälan dygnet runt.</b></p>
+            <p class ="felanmalan-info"><br /><b>På hemsidan kan ni göra felanmälan dygnet runt.</b></pclass>
             <p class="felanmalan-info">
                 <br /><b>
                 Om ni ej fått återkoppling inom 1-2 veckor efter att
