--- a/design/design/Views/Home/studentboende.cshtml
+++ b/design/design/Views/Home/studentboende.cshtml
@@ -76,13 +76,13 @@
                     </div>
                 </div>
             </div>
-            <div class="col-md-1 col-sm-1 col-xs-1">
+            @*<div class="col-md-1 col-sm-1 col-xs-1">
 
-            </div>
+            </div>*@
            <div class="col-md-6 col-sm-6 col-xs-12">
 
                <div class="col-md-8 col-sm-12 col-xs-12">
-                   <h3>Bilder från studentboenden</h3>
+                   <h3 style="margin-top:0px;">Bilder från studentboenden</h3>
                     <div id="myCarousel1" class="carousel slide" data-interval="false">
                         <!-- Indicators -->
                         <ol class="carousel-indicators">
@@ -121,11 +121,11 @@
                    <br />
                    <h3>Bra länkar för dig som student</h3>
                    <h4 class="radavstånd">
-                       <a href="https://www.willys.se/Vara-butiker/Butiker/Willys-Orebro-Almby/">Willys</a><br />
-                       <a href="http://bibliotek.orebro.se/">Stadsbiblioteket</a><br />
-                       <a href="http://www.lanstrafiken.se/Orebro/">Länstrafiken</a><br />
-                       <a href="http://www.xn--ob-eka.se/information/kundservice/vara-varuhus/oob-orebro">ÖoB</a> <br />
-                       <a href="https://www.sj.se/">SJ</a>
+                       <a href="https://www.willys.se/Vara-butiker/Butiker/Willys-Orebro-Almby/" target="_blank">Willys</a><br />
+                       <a href="http://bibliotek.orebro.se/" target="_blank">Stadsbiblioteket</a><br />
+                       <a href="http://www.lanstrafiken.se/Orebro/" target="_blank">Länstrafiken</a><br />
+                       <a href="http://www.xn--ob-eka.se/information/kundservice/vara-varuhus/oob-orebro" target="_blank">ÖoB</a> <br />
+                       <a href="https://www.sj.se/" target="_blank">SJ</a>
                    </h4>
 
                </div>
