--- a/design/design/Views/Shared/_Layout.cshtml
+++ b/design/design/Views/Shared/_Layout.cshtml
@@ -10,14 +10,14 @@
 
 </head>
 <body>
-    <div class="container">
+    <div class="container container-main">
          
       <div class="headern">
     <div class="row header1" style="background-color: white; text-align:center;">
        
             <div class="rightimage">
                 <center>
-                    <img src="~/Content/Images/Header2.png" style="width:100%;">
+                    <img src="~/Content/Images/Header3.png" style="width:100%;">
                     <a class="leftimage" href="~/Home/Index"><img class="img-responsive" src="~/Content/Images/transparent.png"></a>
                 </center>
 </div>
