--- a/design/design/Views/Home/Varafastigheter.cshtml
+++ b/design/design/Views/Home/Varafastigheter.cshtml
@@ -74,7 +74,10 @@
                         </div>*@
                     </div>
                     <div class="row">
-                    <div class="btnredigera btn-group-xs">
+
+                    </div>
+                    <div class="row">
+                    <div class="btnredigera btn-group-xs" style="text-align:right;">
                         <button class="btn" type="button" id="redigerabtn" onclick="showredigera()">
                             redigera
                             <span class="caret"></span>
