--- a/design/design/Views/Home/Varafastigheter.cshtml
+++ b/design/design/Views/Home/Varafastigheter.cshtml
@@ -77,16 +77,29 @@
 
                     </div>
                     <div class="row">
+                        <div class="col-lg-8">
+                         
+                        </div>
+                        <div class="col-lg-2">
+                        <div class="btnredigera btn-group-xs" style="text-align:right;">
+                            <button class="btn" type="button" id="redigerabtn">
+                                Ta bort
+                            </button></div>
+                            
+                        </div>
+                        <div class="col-lg-2">
                     <div class="btnredigera btn-group-xs" style="text-align:right;">
                         <button class="btn" type="button" id="redigerabtn" onclick="showredigera()">
                             redigera
                             <span class="caret"></span>
                         </button>
                     </div>
-
+                            </div>
+                       
                         <div class="redigera" id="redigera" style="display:none;">
-                            <div class="falt">
-                                <label>Område:</label>
+                            <div class="falt">                      
+                                <label>
+                                Område:</label>
                                 <div class="input-group">
                                     <input name="state" placeholder="Örebro Norr" class="form-control" type="text">
                                 </div>
@@ -118,6 +131,9 @@
                                 <div class="input-group">
                                     <input name="state" placeholder="https://goo.gl/maps/boNdvNsyb1R2" class="form-control" type="text">
                                 </div>
+                            </div>
+                            <div @*class="col-md-4"*@>
+                                <button type="submit" class="btn btn-warning">Spara <span class="glyphicon glyphicon-floppy-saved"></span></button>
                             </div>
 
                         </div>
