--- a/design/design/Views/Home/VarafastigheterAdmin.cshtml
+++ b/design/design/Views/Home/VarafastigheterAdmin.cshtml
@@ -73,9 +73,72 @@
                             <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d65225.19485646707!2d15.13241503855973!3d59.27805469948709!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x465c017f144aff39%3A0xcfe3b0bad018c93e!2zw5ZyZWJybw!5e0!3m2!1ssv!2sse!4v1492253068164" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
                         </div>*@
                     </div>
-                   
+                    <div class="row">
 
+                    </div>
+                    <div class="row">
+                        <div class="col-lg-8">
+                         
+                        </div>
+                        <div class="col-lg-2">
+                        <div class="btnredigera btn-group-xs" style="text-align:right;">
+                            <button class="btn" type="button" id="redigerabtn">
+                                Ta bort
+                            </button></div>
+                            
+                        </div>
+                        <div class="col-lg-2">
+                    <div class="btnredigera btn-group-xs" style="text-align:right;">
+                        <button class="btn" type="button" id="redigerabtn" onclick="showredigera()">
+                            redigera
+                            <span class="caret"></span>
+                        </button>
+                    </div>
+                            </div>
+                       
+                        <div class="redigera" id="redigera" style="display:none;">
+                            <div class="falt">                      
+                                <label>
+                                Område:</label>
+                                <div class="input-group">
+                                    <input name="state" placeholder="Örebro Norr" class="form-control" type="text">
+                                </div>
+                            </div>
 
+                            <div class="falt">
+                                <label>Adress:</label>
+                                <div class="input-group">
+                                    <input name="state" required placeholder="Rynningegatan 27-37" class="form-control" type="text">
+                                </div>
+                            </div>
+
+                            <div class="falt">
+                                <label>Antal lägenheter i fastigheten:</label>
+                                <div class="input-group">
+                                    <input name="deltagareinput" placeholder="20" class="form-control input-md" type="text">
+                                </div>
+                            </div>
+
+                            <div class="falt">
+                                <label>Bild:</label>
+                                <div class="input-group">
+                                    <input name="state" placeholder="Gatuadress" class="form-control" type="text"> <span class="glyphicon glyphicon-file"></span>
+                                </div>
+                            </div>
+
+                            <div class="falt">
+                                <label>Länk till karta:</label>
+                                <div class="input-group">
+                                    <input name="state" placeholder="https://goo.gl/maps/boNdvNsyb1R2" class="form-control" type="text">
+                                </div>
+                            </div>
+                            <div @*class="col-md-4"*@>
+                                <button type="submit" class="btn btn-warning">Spara <span class="glyphicon glyphicon-floppy-saved"></span></button>
+                            </div>
+
+                        </div>
+
+                    </div>
 
                 </div>
 
@@ -155,5 +218,5 @@
             </div>
         </div>
     </div>
-
+    </div>
         
