redigeraknapp på öppettider, telenr, och adress

--- a/design/design/Views/Home/KontaktAdmin.cshtml
+++ b/design/design/Views/Home/KontaktAdmin.cshtml
@@ -15,7 +15,11 @@
                     <br />702 83 Örebro
                     <br /><span class="glyphicon glyphicon-map-marker"></span><a href="https://goo.gl/maps/oeFiqLVaNsv" target="_blank"> Hitta hit</a>
                 </p>
-
+                <div class="btnredigera btn-group-xs">
+                    <button class="btn" type="button" id="redigerabtn">
+                        Redigera
+                    </button>
+                </div>
             </div>
             <div class="col-sm-4 col-md-4 col-lg-4">
                 <h3 class="red">Kontorets öppettider</h3>
@@ -23,7 +27,14 @@
                     Måndag - Fredag: 07.30-16.30
                     <br />Telefontid: 09.00-16.00
                     <br />Lunchstängt: 12.00-13.00
+                                        
                 </p>
+                <br />
+                <div class="btnredigera btn-group-xs">
+                    <button class="btn" type="button" id="redigerabtn">
+                        Redigera
+                    </button>
+                </div>
             </div>
             <div class="col-sm-3 col-md-3 col-lg-3">
                 <h3 class="red">Telefon</h3>
@@ -31,6 +42,13 @@
                     Telefon: 019 16 43 70
                     <br />Jourtelefon efter kontorstid:<br />
                     010 470 57 58
+                    <br />
+                    <br />
+                    <div class="btnredigera btn-group-xs">
+                        <button class="btn" type="button" id="redigerabtn">
+                            Redigera
+                        </button>
+                    </div>
             </div>
         </div>
 
