--- a/design/design/Views/Home/VarafastigheterAdmin.cshtml
+++ b/design/design/Views/Home/VarafastigheterAdmin.cshtml
@@ -90,52 +90,60 @@
                         <div class="col-lg-2">
                     <div class="btnredigera btn-group-xs" style="text-align:right;">
                         <button class="btn" type="button" id="redigerabtn" onclick="showredigera()">
-                            redigera
+                            Redigera
                             <span class="caret"></span>
                         </button>
                     </div>
                             </div>
+                        </div>
+<div class=" row">
                        
                         <div class="redigera" id="redigera" style="display:none;">
-                            <div class="falt">                      
-                                <label>
-                                Område:</label>
-                                <div class="input-group">
-                                    <input name="state" placeholder="Örebro Norr" class="form-control" type="text">
+                            <div class=" col-md-6">
+                                <div class="falt">
+                                    <label>
+                                        Område:
+                                    </label>
+                                    <div class="input-group">
+                                        <input name="state" placeholder="Örebro Norr" class="form-control" type="text">
+                                    </div>
+                                </div>
+
+                                <div class="falt">
+                                    <label>Adress:</label>
+                                    <div class="input-group">
+                                        <input name="state" required placeholder="Rynningegatan 27-37" class="form-control" type="text">
+                                    </div>
+                                </div>
+
+                                <div class="falt">
+                                    <label>Antal lägenheter i fastigheten:</label>
+                                    <div class="input-group">
+                                        <input name="deltagareinput" placeholder="20" class="form-control input-md" type="text">
+                                    </div>
                                 </div>
                             </div>
+                            <div class=" col-md-6">
+                                <div class="falt" >
+                                    <label>Bild:</label>
+                                    <div class="input-group" >
+                                        <input name="state" placeholder="Gatuadress" class="form-control" type="text">
+                                    </div>j
+                                    <div>
+                                        <button type="submit" class="btn btn-default">Ladda upp <span class="glyphicon glyphicon-file"></span></button>
+                                    </div>
+                                </div>
 
-                            <div class="falt">
-                                <label>Adress:</label>
-                                <div class="input-group">
-                                    <input name="state" required placeholder="Rynningegatan 27-37" class="form-control" type="text">
+                                <div class="falt">
+                                    <label>Länk till karta:</label>
+                                    <div class="input-group">
+                                        <input name="state" placeholder="https://goo.gl/maps/boNdvNsyb1R2" class="form-control" type="text">
+                                    </div>
+                                </div>
+                                <div @*class="col-md-4"*@>
+                                    <button type="submit" class="btn btn-warning">Spara <span class="glyphicon glyphicon-floppy-saved"></span></button>
                                 </div>
                             </div>
-
-                            <div class="falt">
-                                <label>Antal lägenheter i fastigheten:</label>
-                                <div class="input-group">
-                                    <input name="deltagareinput" placeholder="20" class="form-control input-md" type="text">
-                                </div>
-                            </div>
-
-                            <div class="falt">
-                                <label>Bild:</label>
-                                <div class="input-group">
-                                    <input name="state" placeholder="Gatuadress" class="form-control" type="text"> <span class="glyphicon glyphicon-file"></span>
-                                </div>
-                            </div>
-
-                            <div class="falt">
-                                <label>Länk till karta:</label>
-                                <div class="input-group">
-                                    <input name="state" placeholder="https://goo.gl/maps/boNdvNsyb1R2" class="form-control" type="text">
-                                </div>
-                            </div>
-                            <div @*class="col-md-4"*@>
-                                <button type="submit" class="btn btn-warning">Spara <span class="glyphicon glyphicon-floppy-saved"></span></button>
-                            </div>
-
                         </div>
 
                     </div>
