Fixat ladda upp knappen på samma rad

--- a/design/design/Views/Home/VarafastigheterAdmin.cshtml
+++ b/design/design/Views/Home/VarafastigheterAdmin.cshtml
@@ -123,13 +123,14 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class=" col-md-6">
-                                <div class="falt" >
-                                    <label>Bild:</label>
-                                    <div class="input-group" >
+                            <div class=" col-md-6"><label>Bild:</label>
+                                <div class="row falt">
+                                    
+                                    <div class="col-md-6">
+                                       
                                         <input name="state" placeholder="Gatuadress" class="form-control" type="text">
-                                    </div>j
-                                    <div>
+                                    </div>
+                                    <div class=" col-md-3">
                                         <button type="submit" class="btn btn-default">Ladda upp <span class="glyphicon glyphicon-file"></span></button>
                                     </div>
                                 </div>
